[tool.poetry]
name = "docling-lab"
version = "0.1.0"
description = ""
authors = ["Pilar Madariaga <pilar.madariaga@gft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
docling = "^2.14.0"
tesseract = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
